maze.pledge.PledgeMaze.scala.error
Erreur de compilation :
PledgeMaze:30: error: ';' expected but 'return' found.
  } return x;
    ^